--- a/index.html
+++ b/index.html
@@ -45,8 +45,115 @@
 
         </div>
       </section>
-
       <section class="digits">
+        <h1 class="section-title">
+          Цифры и факты
+        </h1>
+        <h2 class="section-subtitle">
+          Про учебу и мозг
+        </h2>
+<!--        <table class="table">-->
+<!--          <tr class="table__row">-->
+<!--            <td class="table__cell">-->
+<!--              ЯЧЕЙКА 1-->
+<!--            </td>-->
+<!--            <td class="table__cell">-->
+<!--              ЯЧЕЙКА 2-->
+<!--            </td>-->
+<!--            <td class="table__cell">-->
+<!--              ЯЧЕЙКА 3-->
+<!--            </td>-->
+<!--            <td class="table__cell">-->
+<!--              ЯЧЕЙКА 4-->
+<!--            </td>-->
+<!--          </tr>-->
+<!--          <tr class="table__row">-->
+<!--            <td class="table__cell">-->
+<!--              ЯЧЕЙКА 1-->
+<!--            </td>-->
+<!--            <td class="table__cell">-->
+<!--              ЯЧЕЙКА 2-->
+<!--            </td>-->
+<!--            <td class="table__cell">-->
+<!--              ЯЧЕЙКА 3-->
+<!--            </td>-->
+<!--            <td class="table__cell">-->
+<!--              ЯЧЕЙКА 4-->
+<!--            </td>-->
+<!--          </tr>-->
+<!--        </table>-->
+        <ul class="table">
+          <li class="table__cell">
+            <h1 class="table__heading">
+              86 миллиардов
+            </h1>
+            <p class="table__text">
+              Число нейронов в мозге человека
+            </p>
+          </li>
+          <li class="table__cell">
+            <h1 class="table__heading">
+              2,1 миллиарда
+            </h1>
+            <p class="table__text">
+              Число нуждающихся в повышении квалификации
+            </p>
+            <p class="table__text">
+              Всемирный Банк, 2017
+            </p>
+          </li>
+          <li class="table__cell">
+            <h1 class="table__heading">
+              1000 терабайт
+            </h1>
+            <p class="table__text">
+              Обьем в памяти человека
+            </p>
+          </li>
+          <li class="table__cell">
+            <h1 class="table__heading">
+              500 триллионов
+            </h1>
+            <p class="table__text">
+              Число ответственных за обучение нервных синапсов у взрослого человека
+            </p>
+          </li>
+          <li class="table__cell">
+            <h1 class="table__heading">
+              420 миллионов
+            </h1>
+            <p class="table__text">
+              Число взрослых людей моложе 25 лет, не имеющих образование для трудоустройства
+            </p>
+            <p class="table__text">
+              Всемирный Банк, 2017
+            </p>
+          </li>
+          <li class="table__cell">
+            <h1 class="table__heading">
+              17-20 лет
+            </h1>
+            <p class="table__text">
+              Пик обучаемости
+            </p>
+          </li>
+          <li class="table__cell">
+            <h1 class="table__heading">
+              1885 год
+            </h1>
+            <p class="table__text">
+              Открытие кривой забывания
+            </p>
+          </li>
+          <li class="table__cell">
+            <h1 class="table__heading">
+              1889 год
+            </h1>
+            <p class="table__text">
+              Открытие условного рефлекса
+            </p>
+          </li>
+        </ul>
       </section>
 
       <section class="feynman">
