--- a/index.html
+++ b/index.html
@@ -52,36 +52,6 @@
         <h2 class="section-subtitle">
           Про учебу и мозг
         </h2>
-<!--        <table class="table">-->
-<!--          <tr class="table__row">-->
-<!--            <td class="table__cell">-->
-<!--              ЯЧЕЙКА 1-->
-<!--            </td>-->
-<!--            <td class="table__cell">-->
-<!--              ЯЧЕЙКА 2-->
-<!--            </td>-->
-<!--            <td class="table__cell">-->
-<!--              ЯЧЕЙКА 3-->
-<!--            </td>-->
-<!--            <td class="table__cell">-->
-<!--              ЯЧЕЙКА 4-->
-<!--            </td>-->
-<!--          </tr>-->
-<!--          <tr class="table__row">-->
-<!--            <td class="table__cell">-->
-<!--              ЯЧЕЙКА 1-->
-<!--            </td>-->
-<!--            <td class="table__cell">-->
-<!--              ЯЧЕЙКА 2-->
-<!--            </td>-->
-<!--            <td class="table__cell">-->
-<!--              ЯЧЕЙКА 3-->
-<!--            </td>-->
-<!--            <td class="table__cell">-->
-<!--              ЯЧЕЙКА 4-->
-<!--            </td>-->
-<!--          </tr>-->
-<!--        </table>-->
         <ul class="table">
           <li class="table__cell">
             <h1 class="table__heading">
@@ -155,11 +125,82 @@
           </li>
         </ul>
       </section>
-
       <section class="feynman">
+        <h1 class="feynman__title">Метод Фейнмана</h1>
+        <h2 class="feynman__subtitle">Выучить и не забыть</h2>
+        <a href="#" class="feynman__link">Подробнее →</a>
+<!--        <img src="./images/feynman.png" alt="Here is photo of Feyman" class="feynman__background-photo">-->
       </section>
-
       <section class="kaufman">
+        <h1 class="section-title text-color_theme_dark">
+          Принципы обучения
+        </h1>
+        <h2 class="section-subtitle text-color_theme_dark">
+          от Джоша Кауфмана
+        </h2>
+        <ul class="table table__theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h1 class="table__heading table__heading_theme_dark">1</h1>
+            <p class="table__text table__text_theme_dark">
+              Выберете привлекательный проект
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h1 class="table__heading table__heading_theme_dark">2</h1>
+            <p class="table__text table__text_theme_dark">
+              Сосредоточьтесть на одном каком-то одном навыке
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h1 class="table__heading table__heading_theme_dark">3</h1>
+            <p class="table__text table__text_theme_dark">
+              Определите целевой уровень мастерства
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h1 class="table__heading table__heading_theme_dark">4</h1>
+            <p class="table__text table__text_theme_dark">
+              Разбейте навык на элементы
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h1 class="table__heading table__heading_theme_dark">5</h1>
+            <p class="table__text table__text_theme_dark">
+              Приготовьте все необходимое для занятий
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h1 class="table__heading table__heading_theme_dark">6</h1>
+            <p class="table__text table__text_theme_dark">
+              Устраните препятствия для занятий
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h1 class="table__heading table__heading_theme_dark">7</h1>
+            <p class="table__text table__text_theme_dark">
+              Выберете специальное время для занятий
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h1 class="table__heading table__heading_theme_dark">8</h1>
+            <p class="table__text table__text_theme_dark">
+              Создайте быстрые петли обратной связи
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h1 class="table__heading table__heading_theme_dark">9</h1>
+            <p class="table__text table__text_theme_dark">
+              Занимайтесь по расписанию, короткими интенсивными интервалами
+            </p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h1 class="table__heading table__heading_theme_dark">10</h1>
+            <p class="table__text table__text_theme_dark">
+              Уделяйте внимание количеству и скорости
+            </p>
+          </li>
+        </ul>
+        <img src="./images/kaufman-triangle.svg" alt="Blue triangle" class="kaufman__triangle">
       </section>
     </main>
     <footer class="footer">
