kaufman implemented plus footer a little bit

--- a/index.html
+++ b/index.html
@@ -204,7 +204,11 @@
       </section>
     </main>
     <footer class="footer">
+      <div class="footer-columns">
+        <div class="footer__columns_content_copyright">
 
+        </div>
+      </div>
     </footer>
   </div>
 </body>
