--- a/index.html
+++ b/index.html
@@ -204,9 +204,32 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer-columns">
-        <div class="footer__columns_content_copyright">
-
+      <div class="footer__columns">
+        <div class="footer__column_content_copyright">
+          <img src="./images/logo_place_footer.svg" alt="Yandex logo" class="logo_place_footer">
+          <div class="footer-author">&copy2019. Виктор Абанькин</div>
+        </div>
+        <div class="footer__column_info">
+          <h1 class="column-heading text-color_theme_dark">О Практикуме</h1>
+          <div class="column-links">
+            <a href="#" class="column-link text-color_theme_dark">Главная</a>
+            <a href="#" class="column-link text-color_theme_dark">Концепция</a>
+            <a href="#" class="column-link text-color_theme_dark">Наставники</a>
+          </div>
+        </div>
+        <div class="footer__column_socials">
+          <h1 class="column-heading text-color_theme_dark">Socials</h1>
+          <div class="column-links">
+            <a href="#" class="column-link text-color_theme_dark column-link_type_fb">
+              Facebook
+            </a>
+            <a href="#" class="column-link text-color_theme_dark column-link_type_vk">
+              ВКонтакте
+            </a>
+            <a href="#" class="column-link text-color_theme_dark column-link_type_insta">
+              Instagram
+            </a>
+          </div>
         </div>
       </div>
     </footer>
