--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="logo_place_header"></div>
+      <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать
         в своей жизни?
@@ -208,7 +208,7 @@
           <img src="./images/logo_place_footer.svg" alt="Yandex logo" class=" logo logo_place_footer">
           <p class="footer__author">&copy;2019. Виктор Абанькин</p>
         </div>
-        <nav class="footer__column footer__column_info">
+        <nav class="footer__column footer__column_content_info">
           <h2 class="footer__column-heading">О Практикуме</h2>
           <ul class="footer__column-links">
             <li>
@@ -222,24 +222,24 @@
             </li>
           </ul>
         </nav>
-        <nav class="footer__column footer__column_socials">
+        <nav class="footer__column footer__column_content_socials">
           <h2 class="footer__column-heading">Socials</h2>
           <ul class="footer__column-links">
             <li>
               <a href="#" class="footer__column-link">
-                <img src="./images/facebook_color_white.svg" alt="" class="footer_column-link-icon">
+                <img src="./images/facebook_color_white.svg" alt="Facebook icon" class="footer__social-icon">
                 Facebook
               </a>
             </li>
             <li>
               <a href="#" class="footer__column-link">
-                <img src="./images/vk_color_white.svg" alt="" class="footer_column-link-icon">
+                <img src="./images/vk_color_white.svg" alt="VK icon" class="footer__social-icon">
                 ВКонтакте
               </a>
             </li>
             <li>
               <a href="#" class="footer__column-link">
-                <img src="./images/instagram_color_white.svg" alt="" class="footer_column-link-icon">
+                <img src="./images/instagram_color_white.svg" alt="Instagram icon" class="footer__social-icon">
                 Instagram
               </a>
             </li>
