--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <img src="./images/logo_place_footer.svg" alt="Yandex logo" class=" logo logo_place_footer">
+          <img src="./images/logo_place_footer.svg" alt="Лого Яндекс" class=" logo logo_place_footer">
           <p class="footer__author">&copy;2019. Виктор Абанькин</p>
         </div>
         <nav class="footer__column footer__column_content_info">
@@ -227,19 +227,19 @@
           <ul class="footer__column-links">
             <li>
               <a href="#" class="footer__column-link">
-                <img src="./images/facebook_color_white.svg" alt="Facebook icon" class="footer__social-icon">
+                <img src="./images/facebook_color_white.svg" alt="Иконка Facebook" class="footer__social-icon">
                 Facebook
               </a>
             </li>
             <li>
               <a href="#" class="footer__column-link">
-                <img src="./images/vk_color_white.svg" alt="VK icon" class="footer__social-icon">
+                <img src="./images/vk_color_white.svg" alt="Иконка ВК" class="footer__social-icon">
                 ВКонтакте
               </a>
             </li>
             <li>
               <a href="#" class="footer__column-link">
-                <img src="./images/instagram_color_white.svg" alt="Instagram icon" class="footer__social-icon">
+                <img src="./images/instagram_color_white.svg" alt="Иконка Instagram" class="footer__social-icon">
                 Instagram
               </a>
             </li>
