Learning techniques completed

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </p>
       <div class="header__main-ilustration">
       </div>
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -40,8 +40,47 @@
               захватывающим. Эти же техники применяются на примере обучения в Практикуме.
             </p>
           </div>
-
         </article>
+      </section>
+      <section class="techniques">
+        <h2 class="section-title">
+          Техники обучения
+        </h2>
+        <p class="section-subtitle">
+          Пять практик от Барбары Оакли
+        </p>
+        <div class="cards">
+          <div class="cards__item">
+            <img class="cards__image" alt="Иконка с книгой в руке" src="images/cards-attention.png">
+            <h4 class="cards__title">Два вида внимания</h4>
+            <div class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление</div>
+          </div>
+
+          <div class="cards__item">
+            <img class="cards__image" alt="Иконка со статуей" src="images/cards-recall.png">
+            <h4 class="cards__title">Recall</h4>
+            <div class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти</div>
+          </div>
+
+          <div class="cards__item">
+            <img class="cards__image" alt="Иконка с абстрактным помещением" src="images/cards-interliving.png">
+            <h4 class="cards__title">Интерливинг</h4>
+            <div class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга</div>
+          </div>
+
+          <div class="cards__item">
+            <img class="cards__image" alt="Иконка с белыми стенами" src="images/cards-question.png">
+            <h4 class="cards__title">Вопросы</h4>
+            <div class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует</div>
+          </div>
+
+          <div class="cards__item">
+            <img class="cards__image" alt="Иконка с ладонью с книгами на ней" src="images/cards-competence.png">
+            <h4 class="cards__title">Иллюзия компетентности</h4>
+            <div class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой</div>
+          </div>
+
+        </div>
       </section>
       <section class="digits">
         <h2 class="section-title">
