--- a/index.html
+++ b/index.html
@@ -190,6 +190,31 @@
           </li>
         </ul>
       </section>
+      <section class="khan">
+        <div class="khan__container">
+          <span class="khan__author">
+            Салман Хан
+          </span>
+          <h2 class="khan__title">
+            Весь мир - школа
+          </h2>
+          <div class="khan__quote">
+            Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу "Весь мир - школа"
+            нужно прочитать всем, кто занимается образованием - так учащиеся повсюду смогут получить навыки и знания,
+            которые приносят успех в школе, карьере и жизни.
+          </div>
+          <div class="khan__quote-author">
+            Джордж Лукас
+          </div>
+          <div class="khan__quote-author-subline">
+            Кинорежиссер, продюсер
+          </div>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="images/khan-book.jpg" alt="Фото обложки книги Саламана Хана Весь мир - школа">
+            <a class="khan__buy-link" href="#">Купить книгу →</a>
+          </div>
+        </div>
+      </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">
           Принципы обучения
