--- a/index.html
+++ b/index.html
@@ -284,7 +284,29 @@
             </p>
           </li>
         </ul>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
+      </section>
+      <section class="resources">
+        <h2 class="section-title">
+          Полезные ресурсы
+        </h2>
+        <p class="section-subtitle">
+          Больше материалов о техниках и лайфхаках обучения
+        </p>
+        <div class="resources__logo-zone">
+          <a href="#">
+            <img class="resources__logo" alt="Лого Арзамас" src="images/logo/resources-arzamas.svg">
+          </a>
+          <a href="#">
+            <img class="resources__logo" alt="Лого N+1" src="images/logo/resources-n1.svg">
+          </a>
+          <a href="#">
+            <img class="resources__logo" alt="Лого Стрелка" src="images/logo/resources-strelka.svg">
+          </a>
+          <a href="#">
+            <img class="resources__logo" alt="Лого Полка" src="images/logo/resources-polka.svg">
+          </a>
+        </div>
       </section>
     </main>
     <footer class="footer">
