all fixed except cards->ul

--- a/index.html
+++ b/index.html
@@ -52,28 +52,28 @@
         <div class="cards">
           <div class="cards__item">
             <img class="cards__image" alt="Иконка с книгой в руке" src="images/cards-attention.png">
-            <h4 class="cards__title">Два вида внимания</h4>
-            <div class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление</div>
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление</p>
           </div>
           <div class="cards__item">
             <img class="cards__image" alt="Иконка со статуей" src="images/cards-recall.png">
-            <h4 class="cards__title">Recall</h4>
-            <div class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти</div>
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти</p>
           </div>
           <div class="cards__item">
             <img class="cards__image" alt="Иконка с абстрактным помещением" src="images/cards-interliving.png">
-            <h4 class="cards__title">Интерливинг</h4>
-            <div class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга</div>
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга</p>
           </div>
           <div class="cards__item">
             <img class="cards__image" alt="Иконка с белыми стенами" src="images/cards-question.png">
-            <h4 class="cards__title">Вопросы</h4>
-            <div class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует</div>
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует</p>
           </div>
           <div class="cards__item">
             <img class="cards__image" alt="Иконка с ладонью с книгами на ней" src="images/cards-competence.png">
-            <h4 class="cards__title">Иллюзия компетентности</h4>
-            <div class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой</div>
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой</p>
           </div>
         </div>
       </section>
@@ -85,8 +85,8 @@
           Для тех, кто любит прокрастинировать
         </p>
         <div class="video__iframes">
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </section>
       <section class="oakley">
@@ -192,23 +192,23 @@
       </section>
       <section class="khan">
         <div class="khan__container">
-          <span class="khan__author">
+          <p class="khan__author">
             Салман Хан
-          </span>
+          </p>
           <h2 class="khan__title">
             Весь мир - школа
           </h2>
-          <div class="khan__quote">
+          <blockquote class="khan__quote">
             Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу "Весь мир - школа"
             нужно прочитать всем, кто занимается образованием - так учащиеся повсюду смогут получить навыки и знания,
             которые приносят успех в школе, карьере и жизни.
-          </div>
-          <div class="khan__quote-author">
+          </blockquote>
+          <p class="khan__quote-author">
             Джордж Лукас
-          </div>
-          <div class="khan__quote-author-subline">
+          </p>
+          <p class="khan__quote-author-subline">
             Кинорежиссер, продюсер
-          </div>
+          </p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="images/khan-book.jpg" alt="Фото обложки книги Саламана Хана Весь мир - школа">
             <a class="khan__buy-link" href="#">Купить книгу →</a>
