--- a/index.html
+++ b/index.html
@@ -294,16 +294,16 @@
           Больше материалов о техниках и лайфхаках обучения
         </p>
         <div class="resources__logo-zone">
-          <a href="#">
+          <a class="resources__link" href="#">
             <img class="resources__logo" alt="Лого Арзамас" src="images/logo/resources-arzamas.svg">
           </a>
-          <a href="#">
+          <a class="resources__link" href="#">
             <img class="resources__logo" alt="Лого N+1" src="images/logo/resources-n1.svg">
           </a>
-          <a href="#">
+          <a class="resources__link" href="#">
             <img class="resources__logo" alt="Лого Стрелка" src="images/logo/resources-strelka.svg">
           </a>
-          <a href="#">
+          <a class="resources__link" href="#">
             <img class="resources__logo" alt="Лого Полка" src="images/logo/resources-polka.svg">
           </a>
         </div>
